[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Scripts/hoveringMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/alegreya-sc/AlegreyaSC-BlackItalic.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 200
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font" ]

[node name="Control" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 960.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 200
custom_constants/margin_top = 100
custom_constants/margin_left = 200
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="CanvasLayer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 100.0
margin_right = 1080.0
margin_bottom = 860.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 888.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/Panel/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 888.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_left = 220
_sections_unfolded = [ "custom_constants" ]

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Panel/VBoxContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 220.0
margin_right = 888.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Menu"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 277.0
margin_right = 888.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 888.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 250
custom_constants/margin_top = 10
custom_constants/margin_left = 250
custom_constants/margin_bottom = 10
_sections_unfolded = [ "custom_constants" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MainMenu" type="Button" parent="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 250.0
margin_top = 10.0
margin_right = 638.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main Menu"
flat = false
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 106.0
margin_right = 888.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 250
custom_constants/margin_top = 10
custom_constants/margin_left = 250
custom_constants/margin_bottom = 10
_sections_unfolded = [ "custom_constants" ]
__meta__ = {
"_edit_lock_": true
}

[node name="levelSelector" type="Button" parent="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 250.0
margin_top = 10.0
margin_right = 638.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Level Selector"
flat = false
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 212.0
margin_right = 888.0
margin_bottom = 314.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 250
custom_constants/margin_top = 10
custom_constants/margin_left = 250
custom_constants/margin_bottom = 10
_sections_unfolded = [ "custom_constants" ]
__meta__ = {
"_edit_lock_": true
}

[node name="saveGame" type="Button" parent="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 250.0
margin_top = 10.0
margin_right = 638.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save Game"
flat = false
align = 1

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 318.0
margin_right = 888.0
margin_bottom = 423.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 250
custom_constants/margin_top = 10
custom_constants/margin_left = 250
custom_constants/margin_bottom = 10
_sections_unfolded = [ "custom_constants" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Quit" type="Button" parent="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer4" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 250.0
margin_top = 10.0
margin_right = 638.0
margin_bottom = 95.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quittez le jeu"
flat = false
align = 1

[connection signal="button_down" from="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer/MainMenu" to="." method="_on_MainMenu_button_down"]

[connection signal="button_down" from="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer2/levelSelector" to="." method="_on_levelSelector_button_down"]

[connection signal="button_down" from="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer3/saveGame" to="." method="_on_saveGame_button_down"]

[connection signal="button_down" from="CanvasLayer/MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer4/Quit" to="." method="_on_Quit_button_down"]


